	PR c++/89640 - GNU attributes on lambda.

My patch for PR 60503 to fix C++11 attribute parsing on lambdas accidentally
removed support for GNU attributes.

	* parser.c (cp_parser_lambda_declarator_opt): Allow GNU attributes.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@269775 138bc75d-0d04-0410-961f-82ee72b054a4